chore: fix spacing

--- a/app/assets/stylesheets/pages/_chatrooms.scss
+++ b/app/assets/stylesheets/pages/_chatrooms.scss
@@ -109,7 +109,7 @@
   border-radius: $border-radius-xl;
   opacity: 0.90;
   height: auto;
-  max-height: 30.5em;
+  max-height: 31em;
   overflow: hidden;
   padding-bottom: 20px;
 }
